fixed slide resize problem with overflow-hidden on slides in preview

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -173,7 +173,8 @@ i.cross{
 	border-radius: 5px;
 	border: 2px solid black;
 	width: 100%;
-	height: calc(12em * 9 / 16);	
+	height: calc(200px * 9 / 16);	
+	overflow: hidden;
 }
 
 .slide_text li{
